--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZGlyZWN0LXRldHJhLTUzLmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_catrfeoIRuIZoqgdIp8JL3T5bWQlkCfBlgWt7JAs9Z
+
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
