developed create character form

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,5 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL='mysql://y1cq7j4e3ao4d9cftmp1:pscale_pw_dPN1bn0BXKvNOarc4C7Vb9Pd7QrQzUfOMCcbf9ZlFmB@aws.connect.psdb.cloud/ai-chatbot?sslaccept=strict'
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dgcyuf83r"
