--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "react-hook-form": "^7.50.1",
     "react-spinners": "^0.13.8",
     "replicate": "^0.9.3",
+    "stripe": "^12.14.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^20",
